Container spec
